added fixes for IE

--- a/quintagroup/theme/sunrain/static/css/IEFixes.css
+++ b/quintagroup/theme/sunrain/static/css/IEFixes.css
@@ -1,326 +1,29 @@
-/*
-** Stylesheet with Internet Explorer-specific workarounds.
-*/
-
-/* <dtml-with base_properties> */
-
-* html #portal-columns {
-  width: 100%;
-}
-* html*#portal-columns {
-    width: auto;
-}
-input {
-    margin-bottom: 1px; /* bug fix */
-}
-table.listing td.top {
-    /* insane IE row bug workaround */
-    position: relative;
-    left: -1px;
-    top: -1px;
-}
-div#portal-columns div#portal-column-one,
-div#portal-columns div#portal-column-two {
-    overflow: hidden;
-}
-textarea {
-    width: 97%;
-}
-.visualOverflow {
-    width: 88%;
-}
-.visualGhosted {
-    filter:alpha(opacity=20); 
-}
-
-/* make spans within ABBR have a border in IE6 the same way it is in all other browsers */
-* html abbr .explain {
-    border-bottom: &dtml-borderWidth; dotted &dtml-fontColor;;
-}
-
-/* Fix bottom margin on tabs in IE */
-#portal-globalnav {
-  zoom:1;
-  }
-#portal-globalnav li.selected a {
-position: relative;
-}
-#portal-colophon .colophonIcon {
-    height: 0px !important;
-    height /**/: 15px;
-}
-.actionMenu .actionMenuHeader a {
-    display: inline;
-}
-.actionMenu .actionMenuContent {
-    top: 1.4em;
-}
-
-/* Calendar fixes */
-.ploneCalendar { 
-    border-collapse:collapse;
-    width:auto; 
-    height:1%;
-}
-.ploneCalendar td { 
-    width:1%;
-}
-.ploneCalendar .todaynoevent,
-.ploneCalendar .todayevent {
-    position: relative;
-}
-.hiddenStructure { /* This is necessary to eliminate the 1px high object in
-                      the document flow in place of .hiddenStructure block objects */
-    position: absolute;
-}
-
-/* These work in IE only, changes the look of the scrollbar + textareas 
-   We disabled these in Plone 3.0, but if you want them back, uncomment 
-*/
-/*
-body { 
-    scrollbar-base-color: &dtml-globalBackgroundColor;;
-    scrollbar-highlight-color: &dtml-globalBackgroundColor;;
-    scrollbar-track-color: &dtml-evenRowBackgroundColor;;
-    scrollbar-darkshadow-color: &dtml-evenRowBackgroundColor;;
-    scrollbar-3dlight-color: &dtml-globalBorderColor;;
-    scrollbar-shadow-color: &dtml-globalBorderColor;;
-    scrollbar-arrow-color: &dtml-globalFontColor;;
-}
-*/
-
-/* Holly hack to kill the Peekaboo bug in IE - details at
-   http://www.positioniseverything.net/explorer/peekaboo.html
-   "* html" syntax is added to hide it from IE5/Mac. ~limi
- */
-
-#floatholder, #float {
-    height: 1%;
-}
-
-* html .link-external,
-* html .link-external a,
-* html .link-mailto a,
-* html .link-mailto {
-     height: 1%; 
-} 
-
-/* Fix for IE float bug */
-* html .visualIEFloatFix,
-* html h1,
-* html h2,
-* html h3,
-* html h4,
-* html h5,
-* html h6,
-* html dd,
-* html .documentDescription,
-* html .visualClear,
-* html .portalMessage,
-* html .portalWarningMessage,
-* html .portalStopMessage,
-* html .system-message,
-* html #error-handling,
-.documentContent {
-    height: 0.1%;
-}
-
-/* Fix for IE float bug - have to use the Limi Hack here, since the paragraph
-   tag doesn't take nicely to the height hack above in IE. */
-* html .documentContent p {
-    /*position: relative;*/
-}
-* html h1.documentFirstHeading {
-    height: auto;
-}
-
-/* There appears to be a bug in some IE 6 versions that causes dashed borders
-   to get positioned strangely (i.e. out of the portlet in this case), and
-   to move about when scrolling.  May be related to:
-   http://mtiki.mmf.at/mt/archives/000011.html */
-dd.portletFooter {
-    border-top-style: solid;
-}
-
-/* Rounded corner workarounds for IE */
-* html .portletHeader {
-    height: 1%;
-}
-.portletTopRight, 
-.portletTopLeft {
-    top: 0px;
-}
-.portletTopRight,
-.portletTopLeft,
-.portletBottomRight,
-.portletBottomLeft {
-    font-size: 1px;
-}
-
-/* fix for the horizontal scroll due to the floated searchbox without width definition */
-/* Commented bad fixes */
-/*#portal-searchbox {
-    overflow: auto; 
-}
-body.fullscreen #portal-searchbox {
-    overflow: visible;
-}*/
-#portal-searchbox {
-  /*max-width: 230px;*/
-  }
-
-
-/* IE doesn't know what to do with the caption element, hide it */
-table.ploneCalendar caption {
-    display: none !important;
-}
-
-/* Custom qploneThemantic Fixes */
-/* Need for IE 7 while zooming */
-#portal-globalnav li a {
+#theme-globalnav {
   zoom: 1;
   }
-.hiddenStructure {
-  text-indent: 9999px;
+#portal-searchbox .searchButton {
+  overflow:hidden;
+  padding-top:33px;
   }
-/* Some IE 7 fixes */
-.actionSeparator {
-  white-space: nowrap;
-  }
-/* Fixes that used for IE 6 and lover but also needed for IE 7 */
 #livesearchLegend {
-  margin-top: -1.9em;
-  margin-left: -8px;
-  }
-.LSTable {
-  margin-left: 0;
-  }
-/* Fixes for IE 6 and lover to change border color for live search */
-* html .livesearchContainer {
-  border: 1px solid <dtml-var globalBorderColor>;
-  padding: 0 !important;
-  }
-/* Needed for IE 6 */
-* html #region-content form {
-	width: 94%;
-	}
-body.kupu-fulleditor-zoomed #portal-columns {
-  overflow: visible;
-  }
-
-/* Custom Sun and Rain Theme Fixes */
-* html body {
-  behavior:url("&dtml-portal_url;/csshover.htc");
-  text-align /**/:center;
-  }
-* html #visual-portal-wrapper {
-  text-align /**/:left;
-  }
-#portal-header {
-  height: expression(document.body.clientHeight > 104 ? "100%" : "104px")
-  }
-* html #portal-header {
-  height:104px;
-  }
-* html #portal-logo {
-  position:relative;
-  }
-* html .portal-logo-lining {
-  cursor:pointer;
-  filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='&dtml-portal_url;/&dtml-logoName;',sizingMethod='crop');
-  height:<dtml-var "_[logoName].height">px;
-  margin-left:25px;
-  margin-top:10px;
-  position:absolute;
-  width:<dtml-var "_[logoName].width">px;
-  zoom:1;
-  }
-* html #portal-logo img {
-  filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
-  margin-bottom:0;
-  }
-#portal-slogan {
-  display:inline;
-  zoom:1;
-  }
-* html #portal-siteactions {
-  background-image:none;
-  filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='&dtml-portal_url;/bg-header-actions.png', sizingMethod='crop');
-  }
-* html #portal-personaltools {
-  background-image:none;
-  filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='&dtml-portal_url;/bg-header-actions.png', sizingMethod='crop');
-  float:right;
-  }
-* html #portal-siteactions a,
-* html #portal-personaltools a {
-  position:relative;
-  z-index:1;
-  }
-* html #searchGadget {
-  height /**/:33px;
-  width /**/:248px;
-  }
-* html #livesearchLegend {
-  margin-top:-1.8em !important;
-  }
-.searchSection input {
-  background-color:transparent;
-  }
-* html #portal-searchbox .LSResult {
-  left:auto;
-  }
-* html .portletSearch .portlet-search-gadget {
-  padding:2px 0 1px 3px;
-  }
-* html .portletSearch .searchButton {
-  margin-left:-7px !important;
+  margin-left:-7px;
   }
 .portletSearch .portletItem,
 .portletSearch .LSBox {
   zoom:1;
   }
-* html .portletSearch .portletItem {
-  height:auto;
-  }
-* html .portletSearch .livesearchContainer {
-  clear:left;
-  }
-* html .portletBackgroundItem {
-  height:1%;
-  width:100%;
-  }
-* html .portletGreenItem,
-* html .portletGreyItem {
-  zoom:1;
-  }
-#portal-column-content #content-wrapper {
-  padding: 0.1em 1em;
-  }
-.contentActions,
-.actionMenu {
-  position:static;
-  }
-#dashboard-portlets1,
-#dashboard-portlets2,
-#dashboard-portlets3,
-#dashboard-portlets4 {
-  width:23%;
-  }
-#content-views {
-  margin-top:1px;
+#portal-personaltools-wrapper {
+  z-index:1;
   }
 .documentActions,
 .listingBar {
   position:relative;
   zoom:1;
   }
-
-/* New Custom Sun and Rain Theme Fixes */
+#content .documentActions li {
+  display:inline;
+  }
 .photoAlbumEntry a:hover .photoAlbumEntryTitle { 
   background-color:rgb(241,241,241); 
   cursor:pointer; 
-  } 
-
-
-/* </dtml-with> */
+  }
