--- a/quintagroup/theme/sunrain/static/css/rain.css
+++ b/quintagroup/theme/sunrain/static/css/rain.css
@@ -104,34 +104,41 @@ div.width-2\3a 3 { width: 64.42%; } /* .width-2:3 */
 div.position-1\3a 3 {margin-left: -65.545%;} /* .position-1:3 */
 div.position-2\3a 3 {margin-left: -32.205%;} /* .position-2:3 */
 
-/*---------- PORTAL COLUMNS -----------*/
+/*---------- PORTAL COLUMNS ----------=*/
 div.width-full {
   width:100%;
   }
-div.position-0 {
+#portal-column-content.position-0 {
   margin-left:-100%;
   }
 #portal-column-content.width-1\3a 2 {
-  width:528px;
+  width:52.8%;
   }
 #portal-column-content.position-1\3a 4 {
-  margin-left:-789px;
+  margin-left:-78.9%;
   }
 #portal-column-content.width-3\3a 4 {
-  width:789px;
+  width:78.9%;
   }
 #portal-column-content.width-3\3a 4.position-0 {
-  width:739px;
+  width:73.9%;
   }
 #portal-column-one {
-  margin-left:-1000px;
-  width:200px;
+  margin-left:-100%;
+  width:20%;
   }
 #portal-column-two {
-  margin-left:-250px;
-  width:250px;
+  margin-left:-25%;
+  width:25%;
   }
-
+.cell.red {
+  background-color: #CCCCCC;
+    padding: 1em 0;
+    text-align: center;
+  }
+.grid-background .row {
+  margin-bottom: 1em;
+  }
 /*---------- PORTAL CONTENT ----------*/
 body {
   background-color:#fff;
@@ -418,6 +425,7 @@ input.inputLabelActive {
 #portal-searchbox .searchButton {
   background:url(../images/home_sprite.png) no-repeat 0 -33px;
   border:0;
+  cursor:pointer;
   height:33px;
   padding:0 0 0 2px;
   text-indent:-9999px;
@@ -906,10 +914,10 @@ div.portletGreyItem a.portletLinkItem {
   padding-left:41px;
   }
 .portletItem .navTreeLevel1 .navTreeItem a:hover  {
-  background-color:#e5e7eb;
+  background-color:#e5e7eb !important;
   }
 .portletItem .navTreeLevel1 .navTreeCurrentItem {
-  background-color:#e5e7eb;
+  background-color:#e5e7eb !important;
   }
 
 /* Third Level */
@@ -1207,10 +1215,10 @@ form.searchPage input.searchButton {
   background:#ccd0d6;
   border:0;
   color:#332c34;
-  height:26px;
-  margin-bottom:0 !important;
+  cursor:pointer;
+  height:29px;
+  margin-left:1em;
   padding:0 15px;
-  text-transform:none;
   }
 
 /*----- template logged out -----*/
