added fixes to commenting

--- a/quintagroup/theme/sunrain/static/css/sun.css
+++ b/quintagroup/theme/sunrain/static/css/sun.css
@@ -1825,6 +1825,11 @@ table.grid th {
   }
 
 /*---------- COMMENTING ----------*/
+div#commenting.reply {
+  font-size:100%;
+  float:left;
+  width:99%;
+  }
 .discussion .hide {
   display:none;
   }
