--- a/quintagroup/theme/sunrain/static/css/rain.css
+++ b/quintagroup/theme/sunrain/static/css/rain.css
@@ -1820,6 +1820,11 @@ table.grid th {
   }
 
 /*---------- COMMENTING ----------*/
+div#commenting.reply {
+  font-size:100%;
+  float:left;
+  width:99%;
+  }
 .discussion .hide {
   display:none;
   }
