--- a/quintagroup/theme/sunrain/static/css/sun.css
+++ b/quintagroup/theme/sunrain/static/css/sun.css
@@ -46,68 +46,76 @@ div.cell {
   left: 100%;
 }
 
-/* Width classes. 
-   For a given cell width, the calculation is: width: (6.25*n - 2.25)% */
-div.width-1  { width:  4%    }
-div.width-2  { width: 10.25% }
-div.width-3  { width: 16.5%  }
-div.width-4  { width: 22.75% }
-div.width-5  { width: 29%    }
-div.width-6  { width: 35.25% }
-div.width-7  { width: 41.5%  }
-div.width-8  { width: 47.75% }
-div.width-9  { width: 54%    }
-div.width-10 { width: 60.25% }
-div.width-11 { width: 66.5%  }
-div.width-12 { width: 72.75% }
-div.width-13 { width: 79%    }
-div.width-14 { width: 85.25% }
-div.width-15 { width: 91.5%  }
-div.width-16 { width: 97.75% }
+/*----- WIDTH CLASSES. -----*/
+/*----- For a given cell width -----*/ 
+div.width-1  { width:  5.3125% }
+div.width-2  { width: 11.625% }
+div.width-3  { width: 17.9375% }
+div.width-4  { width: 24.25% }
+div.width-5  { width: 30.5625% }
+div.width-6  { width: 36.875% }
+div.width-7  { width: 43.1875% }
+div.width-8  { width: 49.5% }
+div.width-9  { width: 55.8125% }
+div.width-10 { width: 62.125% }
+div.width-11 { width: 68.4375% }
+div.width-12 { width: 74.75% }
+div.width-13 { width: 81.0625% }
+div.width-14 { width: 87.375% }
+div.width-15 { width: 93.6875% }
+div.width-16 { width: 100% }
 
-
-/* Positioning classes, these are subtracting from a rightmost 
-   position, which is why they seem the wrong way around */
-/* For a given position, the calculation is margin-left: -100 + (6.25*n) + 1.125 */
-div.position-0  { margin-left: -98.875% }
-div.position-1  { margin-left: -92.625% }
-div.position-2  { margin-left: -86.375% }
-div.position-3  { margin-left: -80.125% }
-div.position-4  { margin-left: -73.875% }
-div.position-5  { margin-left: -67.625% }
-div.position-6  { margin-left: -61.375% }
-div.position-7  { margin-left: -55.125% }
-div.position-8  { margin-left: -48.875% }
-div.position-9  { margin-left: -42.625% }
-div.position-10 { margin-left: -36.375% }
-div.position-11 { margin-left: -30.125% }
-div.position-12 { margin-left: -23.875% }
-div.position-13 { margin-left: -17.625% }
-div.position-14 { margin-left: -11.375% }
-div.position-15 { margin-left:  -5.125% }
-
-/* End of the core Deco Grid System */
+/*----- Positioning classes -----*/ 
+div.position-0  { margin-left: -100% }
+div.position-1  { margin-left: -93.75% }
+div.position-2  { margin-left: -87.5%  }
+div.position-3  { margin-left: -81.08% }
+div.position-4  { margin-left: -74.75% }
+div.position-5  { margin-left: -68.5% }
+div.position-6  { margin-left: -62.1% }
+div.position-7  { margin-left: -55.9% }
+div.position-8  { margin-left: -49.45% }
+div.position-9  { margin-left: -43.18% }
+div.position-10 { margin-left: -36.87% }
+div.position-11 { margin-left: -30.56% }
+div.position-12 { margin-left: -24.24% }
+div.position-13 { margin-left: -17.93% }
+div.position-14 { margin-left: -11.62% }
+div.position-15 { margin-left:  -5.31% }
 
 /* Convenience classes — ¼, ½, ¾ widths and ¼, ½, ¾ positions. 
    Not strictly necessary. */
-div.width-1\3a 2 { width:    47.75%; } /* .width-1:2 */
-div.width-1\3a 4 { width:    22.75%; } /* .width-1:4 */
-div.width-3\3a 4 { width:    72.75%; } /* .width-3:4 */
-div.position-1\3a 4 {margin-left:    -73.875%;} /* .position-1:4 */
-div.position-1\3a 2 {margin-left:    -48.875%;} /* .position-1:2 */
-div.position-3\3a 4 {margin-left:    -23.875%;} /* .position-3:4 */
+div.width-1\3a 2 { width:    49.5% } /* .width-1:2 */
+div.width-1\3a 4 { width:    24.3% } /* .width-1:4 */
+div.width-3\3a 4 { width:    74.7% } /* .width-3:4 */
+div.position-1\3a 4 {margin-left:    -74.65% } /* .position-1:4 */
+div.position-1\3a 2 {margin-left:    -49.45% } /* .position-1:2 */
+div.position-3\3a 4 {margin-left:    -24.25% } /* .position-3:4 */
+
 
 /* Special classes for ⅓, ⅔ widths and ⅓, ⅔ positions. 
 These do not strictly conform to the grid, but are useful for certain layouts. */
-div.width-1\3a 3 { width: 31.08%; } /* .width-1:3 */
-div.width-2\3a 3 { width: 64.42%; } /* .width-2:3 */
-div.position-1\3a 3 {margin-left: -65.545%;} /* .position-1:3 */
-div.position-2\3a 3 {margin-left: -32.205%;} /* .position-2:3 */
+div.width-1\3a 3 { width: 32.66%; } /* .width-1:3 */
+div.width-2\3a 3 { width: 66.4%; } /* .width-2:3 */
+div.position-1\3a 3 {margin-left: -66.35%;} /* .position-1:3 */
+div.position-2\3a 3 {margin-left: -32.65%;} /* .position-2:3 */
+
+/* Full/leftmost are useful synonyms for full width and leftmost positioning */
+div.position-leftmost  { margin-left: -100%   }
+div.width-full { width: 100% }
+
+/* Define classes for 1/5ths and 1/6ths widths and positions. */
+div.width-1\3a 5 { width:    19.2%; } /* .width-1:5 */
+div.position-1\3a 5 {margin-left:    -79.8%;} /* .position-1:5 */
+div.position-2\3a 5 {margin-left:    -59.6%;} /* .position-2:5 */
+div.position-3\3a 5 {margin-left:    -39.4%;} /* .position-3:5 */
+div.position-4\3a 5 {margin-left:    -19.15%;} /* .position-4:5 */
+
+div.width-1\3a 6 { width:    15.8333%; } /* .width-1:6 */
+div.position-1\3a 6 {margin-left:    -83.16%;} /* .position-1:6 */
+div.position-5\3a 6 {margin-left:    -15.83%;} /* .position-5:6 */
 
 /*---------- PORTAL COLUMNS ----------=*/
-div.width-full {
-  width:100%;
-  }
 #portal-column-content.position-0 {
   margin-left:-100%;
   }
@@ -1825,11 +1833,6 @@ table.grid th {
   }
 
 /*---------- COMMENTING ----------*/
-div#commenting.reply {
-  font-size:100%;
-  float:left;
-  width:99%;
-  }
 .discussion .hide {
   display:none;
   }
