--- a/quintagroup/theme/sunrain/static/css/rain.css
+++ b/quintagroup/theme/sunrain/static/css/rain.css
@@ -1,7 +1,7 @@
 @media screen {
 
 /*---------- RESET ----------*/
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td { 
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,textarea,p,blockquote,th,td { 
   margin:0;
   padding:0;
   }
@@ -379,7 +379,7 @@ fieldset {
   border-top:3px solid #000;
   }
 #portal-header {
-  background:url(../images/theme_rain/rain_sprite.png) no-repeat 0 0;
+  background:#28293c url(../images/theme_rain/rain_sprite.png) no-repeat 0 0;
   min-height:104px;
   position:relative;
   }
@@ -906,7 +906,8 @@ div.portletGreyItem a.portletLinkItem {
 .navTreeItem a:hover {
   background-color:#f0f2f2 !important;
   }
-.navTreeItem a img {
+.navTreeItem a img,
+.portletRecent a img {
   display:none;
   }
 .navTreeCurrentItem {
