--- a/quintagroup/theme/sunrain/static/css/rain.css
+++ b/quintagroup/theme/sunrain/static/css/rain.css
@@ -354,6 +354,12 @@ fieldset {
   clear:both;
   margin:0 0 1em;
   }
+div.field.error {
+  background-color:#fdc;
+  border:1px solid red;
+  margin:1em 0;
+  padding:0.5em;
+  }
 .formControls {
   margin:1em 0;
   }
@@ -1259,6 +1265,13 @@ form.searchPage input.searchButton {
   }
 
 /*---------- EDITING ----------*/
+.fieldRequired {
+  color:#fff;
+  }
+.fieldRequired:before {
+  color:#f00;
+  content:"■ ";
+  }
 .formPanel {
   padding:1em 2px;
   }
@@ -1418,8 +1431,9 @@ ul.configlets li a {
   background-color:red;
   color:#fff;
   }
-#content li.formTab a.required span {
-  padding-right:1em;
+#content li.formTab a.required span:after {
+  color:#f00;
+  content:" ■";
   }
 #content fieldset.formPanel {
   border:none;
@@ -1936,9 +1950,6 @@ table.grid th {
   background:url(../images/icons-sprite.png) no-repeat 1px -1199px;
   display:block;
   padding-left:17px;
-  }
-#plone-contentmenu-factories li a img {
-  display:none;
   }
 #plone-contentmenu-factories li a:hover {
   background-color:#fff;
